# dotfiles

./: .gitattributes  .stow-local-ignore  README.md  install.sh
Templates/Templates/C/: main.c
Templates/Templates/Cpp/: class.cpp  main.cpp
Templates/Templates/markdown/: chord_tab.md  common.md  diary.md  note.md  weekly.md
Templates/Templates/txt/: CMakeLists.txt
hypr/.config/hypr/: WallRizzTheme.conf  hyprland.conf  hyprlock.conf  hyprpaper.conf
hypr/.config/hypr/scripts/: lock-and-suspend.sh
hyprpanel/.config/hyprpanel/: config-backup.json  config.json
kitty/.config/kitty/: kitty-catppuccin.conf  kitty.conf
lazygit/.config/lazygit/: config.yml
nvim/.config/: rei
nvim/.config/nvim/: .luarc.json  init.lua
nvim/.config/nvim/lua/lihuax/: lazy.lua
nvim/.config/nvim/lua/lihuax/core/: init.lua  keymaps.lua
nvim/.config/nvim/lua/lihuax/plugins/: snacks.lua
nvim/.config/nvim/lua/lihuax/plugins/ai/: avante.lua  copilot.lua
nvim/.config/nvim/lua/lihuax/plugins/common/: buffers.lua  emacs-insert.lua  file-explorer.lua  fold.lua  gitsigns.lua  hop.lua  telescope.lua  template.lua  todo-comments.lua  todo.lua
nvim/.config/nvim/lua/lihuax/plugins/languages/: cmp.lua  debug.lua  lsp-config.lua  tree-sitter-textobjects.lua  tree-sitter.lua  trouble.lua
nvim/.config/nvim/lua/lihuax/plugins/render/: color-scheme.lua  incline.lua  render-md.lua  render-yaml.lua
nvim/.config/nvim/lua/lihuax/plugins/tools/: codesnap.lua  emoji.lua  jupyter.lua  surround.lua  undo-tree.lua
nvim/.config/nvim/lua/lihuax/utils/: artical.lua  auto_update_time.lua  diary.lua  encryption.lua  git.lua  greek.lua  init.lua  makeanki.lua  runner.lua  words.lua
shell/: .bashrc  .zshrc
shell/.config/: .bash_aliases
tmux/: .tmux.conf
tmux/.tmux/custom_modules/: primary_ip.conf
yazi/.config/yazi/: keymap.toml  package.toml  yazi.toml
yazi/.config/yazi/plugins/git.yazi/: main.lua
